Use port 8000 as default for KNRO Lab. Overall cleanup and compatability with latest libindi

--- a/knroSpecControl/mainwindow.ui
+++ b/knroSpecControl/mainwindow.ui
@@ -35,6 +35,24 @@
          </property>
         </widget>
        </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Port:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="serverPort">
+           <property name="text">
+            <string>8000</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
       </layout>
      </widget>
     </item>
@@ -98,7 +116,7 @@
      <x>0</x>
      <y>0</y>
      <width>400</width>
-     <height>25</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
